# rename

rename/: COPYING  LSM  Makefile.am  Makefile.in  README  README.gb  aclocal.m4  config.h.in  config.status  configure  configure.ac  mkinstalldirs
rename/intl/: Makefile
rename/man/: Makefile.am  Makefile.in  rename.1
rename/po/: ChangeLog  Makefile.in  POTFILES.in  rename.pot
rename/src/: ChangeLog  Makefile.am  Makefile.in  fixtoken.c  misc.c  rename.c  rename.h  version.c
